--- a/index.html
+++ b/index.html
@@ -24,15 +24,74 @@
     <link rel="stylesheet" href="./assets/main.css" />
   </head>
   <body>
-    <div class="prelauncher">
-      We're launching soon Days Hours Minutes Seconds
-    </div>
+    <main class="container mx-auto">
+      <h1>We're launching soon</h1>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <div class="countdown">
+        <div class="countdown-card">
+          <div class="countdown-card__body">
+            <div class="countdown-card__body--top"></div>
+            <div class="countdown-card__body--bottom"></div>
+            <span id="days">08</span>
+          </div>
+
+          <div class="countdown-card__title">days</div>
+        </div>
+
+        <div class="countdown-card">
+          <div class="countdown-card__body">
+            <div class="countdown-card__body--top"></div>
+            <div class="countdown-card__body--bottom"></div>
+            <span id="hours">23</span>
+          </div>
+
+          <div class="countdown-card__title">hours</div>
+        </div>
+
+        <div class="countdown-card">
+          <div class="countdown-card__body">
+            <div class="countdown-card__body--top"></div>
+            <div class="countdown-card__body--bottom"></div>
+            <span id="minutes">55</span>
+          </div>
+
+          <div class="countdown-card__title">minutes</div>
+        </div>
+
+        <div class="countdown-card">
+          <div class="countdown-card__body">
+            <div class="countdown-card__body--top"></div>
+            <div class="countdown-card__body--bottom"></div>
+            <span id="seconds">41</span>
+          </div>
+
+          <div class="countdown-card__title">seconds</div>
+        </div>
+      </div>
+
+      <script type="text/javascript" src="./index.js"></script>
+    </main>
+
+    <footer>
+      <div class="container social-links">
+        <a href="#" target="_blank"><img src="./images/icon-facebook.svg" /></a>
+        <a href="#" target="_blank"
+          ><img src="./images/icon-pinterest.svg"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="./images/icon-instagram.svg"
+        /></a>
+      </div>
+
+      <div class="container attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.linkedin.com/in/eugenekulikou/" target="_blank"
+          >Eugene Kulikou</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
