Adds mobile layout

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="./assets/main.css" />
   </head>
   <body>
-    <main class="container mx-auto">
+    <main class="">
       <h1>We're launching soon</h1>
 
-      <div class="countdown">
+      <div id="countdown" class="countdown">
         <div class="countdown-card">
           <div class="countdown-card__body">
             <div class="countdown-card__body--top"></div>
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-      <div class="container social-links">
+      <div class="social-links">
         <a href="#" target="_blank"><img src="./images/icon-facebook.svg" /></a>
         <a href="#" target="_blank"
           ><img src="./images/icon-pinterest.svg"
@@ -83,11 +83,11 @@
         /></a>
       </div>
 
-      <div class="container attribution">
+      <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by
+        >. &nbsp; Coded by
         <a href="https://www.linkedin.com/in/eugenekulikou/" target="_blank"
           >Eugene Kulikou</a
         >.
