Adds hover & acitve links state

--- a/index.html
+++ b/index.html
@@ -74,13 +74,9 @@
 
     <footer>
       <div class="social-links">
-        <a href="#" target="_blank"><img src="./images/icon-facebook.svg" /></a>
-        <a href="#" target="_blank"
-          ><img src="./images/icon-pinterest.svg"
-        /></a>
-        <a href="#" target="_blank"
-          ><img src="./images/icon-instagram.svg"
-        /></a>
+        <a href="#" target="_blank" class="icon icon-facebook"></a>
+        <a href="#" target="_blank" class="icon icon-pinterest"></a>
+        <a href="#" target="_blank" class="icon icon-instagram"></a>
       </div>
 
       <div class="attribution">
