Adds discernible text for icon links

--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
 
     <footer>
       <div class="social-links">
-        <a href="#" target="_blank" class="icon icon-facebook"></a>
-        <a href="#" target="_blank" class="icon icon-pinterest"></a>
-        <a href="#" target="_blank" class="icon icon-instagram"></a>
+        <a href="#" target="_blank" class="icon icon-facebook">
+          <span class="sr-only">Facebook</span>
+        </a>
+        <a href="#" target="_blank" class="icon icon-pinterest">
+          <span class="sr-only">Pinterest</span>
+        </a>
+        <a href="#" target="_blank" class="icon icon-instagram">
+          <span class="sr-only">Instagram</span>
+        </a>
       </div>
 
       <div class="attribution">
